[package]
name = "learn_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic="0.11.0"
prost="0.12"
tokio = { version = "1", features = ["full"] }


[build-dependencies]
tonic-build = "0.11.0"


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"